--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/java_hw_lesson2?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.show-sql=true
