edited task from lesson5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.show-sql=true
+
+#logging.file.name=lesson5_log.txt
