--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/java_hw_lesson2?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/java_hw_lesson6?createDatabaseIfNotExist=true\
+  &allowPublicKeyRetrieval=true\
+  &serverTimezone=UTC&useSSL=false
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.show-sql=true
 
-#logging.file.name=lesson5_log.txt
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smt.writetimeout=5000
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
