--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/java_hw_lesson2?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/java_hw_lesson2?createDatabaseIfNotExist=true&serverTimezone=UTC\
+  &useSSL=false\
+  &allowPublicKeyRetrieval=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.jpa.show-sql=true
-
-#logging.file.name=lesson5_log.txt
